# multi-site-landmark-detection

./: .gitignore  PRD.md  README.md  conftest.py  eda_report_acpc_verification.html  miatt_sahmed8.tex  pixi.toml  pyproject.toml  qc_atlas_predictions.html
artifacts/: miatt_sahmed8.tex
predictions/siteA_unlabeled/0000/: BCD_ACPC_Landmarks.fcsv
predictions/siteA_unlabeled/0012/: BCD_ACPC_Landmarks.fcsv
predictions/siteA_unlabeled/0054/: BCD_ACPC_Landmarks.fcsv
predictions/siteA_unlabeled/0078/: BCD_ACPC_Landmarks.fcsv
predictions/siteA_unlabeled/0084/: BCD_ACPC_Landmarks.fcsv
predictions/siteA_unlabeled/0192/: BCD_ACPC_Landmarks.fcsv
predictions/siteA_unlabeled/0228/: BCD_ACPC_Landmarks.fcsv
predictions/siteA_unlabeled/0234/: BCD_ACPC_Landmarks.fcsv
predictions/siteA_unlabeled/0270/: BCD_ACPC_Landmarks.fcsv
predictions/siteA_unlabeled/0276/: BCD_ACPC_Landmarks.fcsv
predictions/siteA_unlabeled/0288/: BCD_ACPC_Landmarks.fcsv
predictions/siteA_unlabeled/0396/: BCD_ACPC_Landmarks.fcsv
results/: atlas.json  atlas.md  cnn.json  cnn.md  heuristic.json  heuristic.md  lls.json  lls.md  mean.json  mean.md  registration.json  registration.md
scripts/: eda.py  explore_dataset.py  preprocess_and_report.py  qc_atlas_predictions.py  run_pipeline.py  verify_acpc_alignment.py
src/miatt/: __init__.py  acpc.py  atlas.py  cnn.py  heuristic.py  io.py  landmarks.py  lls.py  pipeline.py  preprocessing.py  registration.py
tests/: test_acpc.py  test_cnn.py  test_heuristic.py  test_io.py  test_landmarks.py  test_pipeline.py  test_registration.py
(+150 files in other folders)
